fixed some spacing

--- a/styles/posts.css
+++ b/styles/posts.css
@@ -20,8 +20,8 @@ body {
 }
 
 .card {
-    margin: 0;
-    padding: 0;
+    display: flex;
+    flex-direction: column;
     border: 1px solid rgb(200, 200, 200);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
